--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ description:
  # the subpath of your site, e.g. /blog
 baseurl: ""
 # the base hostname & protocol for your site, e.g. http://example.com
-url: https://poelon.github.io/Zodiaque/
+url: https://poelon.github.io/
 twitter_username: jekyllrb
 github_username:  poelon
 
