--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ github_username:  poelon
 name: Paul NOËL
 # Build settings
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
 theme: minima
 plugins:
   - jekyll-feed
