--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,19 @@ baseurl: ""
 url: https://poelon.github.io/
 twitter_username: jekyllrb
 github_username:  poelon
-name: Paul NOËL
+
 # Build settings
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+permalink: /notes/:year/:month/:day/:title
 theme: minima
 plugins:
   - jekyll-feed
 
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
