--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,10 @@ defaults:
       path: "assets/img"
     values:
       image: true
+      
+collections:
+  - collection
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
